
SUBDIRS = src

arib_descramble_common_cppflags = \
	$(AM_CPPFLAGS) \
	-Wall -Werror
arib_descramble_common_cflags = \
	$(AM_CFLAGS)
arib_descramble_common_cxxflags = \
	$(AM_CXXFLAGS) \
	-std=c++0x
arib_descramble_common_ldflags = \
	$(AM_LDFLAGS)
arib_descramble_common_ldadd = \
	$(AM_LDADD)

export arib_descramble_common_cppflags
export arib_descramble_common_cflags
export arib_descramble_common_cxxflags
export arib_descramble_common_ldflags
export arib_descramble_common_ldadd
